force-app/main/default/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <description>An experience can be created into the application and linked to the program.</description>
    <label>Experience</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Experience Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>