force-app/main/default/objects/Experience__c/fields/Details_on_experience__c.field-meta.xml
<CustomField>
    <fullName>Details_on_experience__c</fullName>
    <label>Details on experience</label>
    <type>TextArea</type>
</CustomField>