force-app/main/default/objects/Experience__c/fields/Experience_Name__c.field-meta.xml
<CustomField>
    <fullName>Experience_Name__c</fullName>
    <label>Experience Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Shopping</fullName>
            </value>
            <value>
                <fullName>La Fabrique du Temps</fullName>
            </value>
            <value>
                <fullName>Asnières</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Fiesso</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Spa</fullName>
            </value>
            <value>
                <fullName>High Jewellry</fullName>
            </value>
            <value>
                <fullName>La Fondation Louis Vuitton</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wines and spirits</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>