force-app/main/default/objects/Experience__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>