force-app/main/default/objects/Experience__c/fields/Recovery_act__c.field-meta.xml
<CustomField>
    <fullName>Recovery_act__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovery act</label>
    <type>Checkbox</type>
</CustomField>