force-app/main/default/objects/Experience__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>If you leave this field empty then it will be populated using the program start date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>