force-app/main/default/objects/Experience__c/recordTypes/Business_Experience.recordType-meta.xml
<RecordType>
    <fullName>Business_Experience</fullName>
    <active>true</active>
    <label>Business Experience</label>
</RecordType>