force-app/main/default/objects/Experience__c/validationRules/VR_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Date</fullName>
    <active>false</active>
    <errorConditionFormula>if(Start_Date__c  &lt;= End_Date__c , false, true)</errorConditionFormula>
    <errorMessage>&apos;Start date&apos; must be equal or earlier than &apos;End date&apos;</errorMessage>
</ValidationRule>