force-app/main/default/objects/Experience__c/validationRules/VR_ExperienceName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ExperienceName</fullName>
    <active>true</active>
    <description>Experience Name is required.</description>
    <errorConditionFormula>ISBLANK(Text(Experience_Name__c))</errorConditionFormula>
    <errorDisplayField>Experience_Name__c</errorDisplayField>
    <errorMessage>&quot;Experience Name&quot; is required.</errorMessage>
</ValidationRule>